pfact test code runs to completion

--- a/test/pfact/CMakeLists.txt
+++ b/test/pfact/CMakeLists.txt
@@ -1,4 +1,3 @@
 add_executable(pfact_shared pfact_shared.cpp)
-target_link_libraries(pfact_shared PRIVATE matgen rochpl_host)
-target_link_libraries(pfact_shared PRIVATE OpenMP::OpenMP_CXX)
-target_link_libraries(pfact_shared PUBLIC MPI::MPI_CXX)
+target_link_libraries(pfact_shared PRIVATE matutils matgen rochpl_host)
+target_link_libraries(pfact_shared PRIVATE MPI::MPI_CXX OpenMP::OpenMP_CXX)
