added test driver for distributed pdfact

--- a/test/pfact/CMakeLists.txt
+++ b/test/pfact/CMakeLists.txt
@@ -1,3 +1,7 @@
 add_executable(pfact_shared pfact_shared.cpp)
 target_link_libraries(pfact_shared PRIVATE matutils matgen rochpl_host)
 target_link_libraries(pfact_shared PRIVATE MPI::MPI_CXX OpenMP::OpenMP_CXX)
+
+add_executable(pfact_dist pfact_dist.cpp)
+target_link_libraries(pfact_dist PRIVATE matutils matgen utils rochpl_host)
+target_link_libraries(pfact_dist PRIVATE MPI::MPI_CXX OpenMP::OpenMP_CXX)
