--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,6 +5,7 @@ add_compile_definitions(HPL_TEST_BUILD)
 include_directories($<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>)
 
 add_subdirectory(matgen)
+add_subdirectory(utils)
 
 enable_testing()
 
