--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,7 @@ include_directories($<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>)
 
 add_subdirectory(matgen)
 add_subdirectory(utils)
+add_subdirectory(blas)
 
 enable_testing()
 
