--- a/test/utils/CMakeLists.txt
+++ b/test/utils/CMakeLists.txt
@@ -1,3 +1,3 @@
 
-add_library(utils test_config.cpp)
+add_library(utils test_config.cpp test_utils.cpp)
 target_link_libraries(utils PRIVATE MPI::MPI_CXX)
